# hpc_server_continously_running_http_job

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
architecture/: architecture.puml
enterprise_cloud/: README.md  hpc_remote_runner.py  requirements.txt  run
hpc/: hpc.py  run  slurm.sbatch
